--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clear-dist": "rm -rf dist/",
     "open-chrome": "wait-on http://localhost:3000 && open -a \"Google Chrome\" http://localhost:3000",
     "start-client": "yarn clear-dist && concurrently \"yarn watch-client\" \"yarn open-chrome\" --raw",
+    "tslint": "tslint -p . -c tslint.json \"**/*.ts\" \"**/*.tsx\"",
     "watch-client": "parcel public/index.html -p 3000"
   },
   "dependencies": {
