--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "wait-on": "^3.2.0"
   },
   "scripts": {
-    "build": "yarn clear-dist && parcel build public/index.html --no-source-maps",
+    "build": "yarn clear-dist && parcel build client/public/index.html --no-source-maps",
     "clear-dist": "rm -rf dist/",
     "open-chrome": "wait-on http://localhost:3000 && open -a \"Google Chrome\" http://localhost:3000",
     "start-client": "yarn clear-dist && concurrently \"yarn watch-client\" \"yarn open-chrome\" --raw",
     "tslint": "tslint -p . -c tslint.json \"**/*.ts\" \"**/*.tsx\"",
-    "watch-client": "parcel public/index.html -p 3000"
+    "watch-client": "parcel client/public/index.html -p 3000"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0"
