--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/navigo": "^7.0.1",
     "autoprefixer": "^9.4.7",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
@@ -23,6 +24,7 @@
     "watch-client": "parcel client/public/index.html -p 3000"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0"
+    "babel-polyfill": "^6.26.0",
+    "navigo": "^7.1.2"
   }
 }
