feat(tests): add unit tests for Transformer

--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "private": true,
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^24.0.9",
     "@types/navigo": "^7.0.1",
     "autoprefixer": "^9.4.7",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "concurrently": "^4.1.0",
+    "jest": "^24.1.0",
     "parcel-bundler": "^1.11.0",
+    "ts-jest": "^24.0.0",
     "tslint": "^5.12.1",
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.3.1",
@@ -22,7 +25,9 @@
     "open-chrome": "wait-on http://localhost:3000 && open -a \"Google Chrome\" http://localhost:3000",
     "start-client": "yarn clear-dist && concurrently \"yarn watch-client\" \"yarn open-chrome\" --raw",
     "tslint": "tslint -p . -c tslint.json \"**/*.ts\" \"**/*.tsx\"",
-    "watch-client": "parcel client/public/index.html -p 3000"
+    "watch-client": "parcel client/public/index.html -p 3000",
+    "test": "jest",
+    "testWithCoverage": "jest --coverage"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
