--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "wait-on": "^3.2.0"
   },
   "scripts": {
-    "build": "yarn clear-dist && parcel build client/public/index.html --no-source-maps",
+    "build": "yarn && yarn clear-dist && parcel build client/public/index.html --no-source-maps",
     "clear-dist": "rm -rf dist/",
     "open-chrome": "wait-on http://localhost:3000 && open -a \"Google Chrome\" http://localhost:3000",
     "start-client": "yarn clear-dist && concurrently \"yarn watch-client\" \"yarn open-chrome\" --raw",
